Fix: TitleBar - Remove native titlebar button style at linux
The title bar is not visible in v140
https://github.com/mozilla/gecko-dev/commit/5ce8bb770f79e92438e6ef7717380202d1eaabba

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -252,25 +252,6 @@
     }
     /*= Linux - Titlebar button at lwtheme =====================================*/
     @media not -moz-pref("userChrome.compatibility.os.linux_non_native_titlebar_button") {
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button {
-        appearance: none !important;
-      }
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button > .toolbarbutton-icon {
-        appearance: auto !important;
-        width: unset !important;
-        height: unset !important;
-      }
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-min,
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-max,
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-restore,
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-close {
-        list-style-image: none !important;
-      }
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button,
-      :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button:hover:active {
-        background-color: unset !important;
-        color: unset !important;
-      }
     }
   }
   /*= Linux - Light System Default Theme's Selected Tab ========================*/
@@ -14418,27 +14399,6 @@
     background-color: color-mix(in srgb, currentColor 20%, transparent) !important; /* Original: -moz-menuhover */
   }
   /*= Linux - Titlebar button at lwtheme =====================================*/
-}
-@media (-moz-bool-pref: "userChrome.compatibility.os") and (-moz-gtk-csd-available) and (not (-moz-bool-pref: "userChrome.compatibility.os.linux_non_native_titlebar_button")) {
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button {
-    appearance: none !important;
-  }
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button > .toolbarbutton-icon {
-    appearance: auto !important;
-    width: unset !important;
-    height: unset !important;
-  }
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-min,
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-max,
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-restore,
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-close {
-    list-style-image: none !important;
-  }
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button,
-  :root:is(:-moz-lwtheme, [lwtheme]) .titlebar-button:hover:active {
-    background-color: unset !important;
-    color: unset !important;
-  }
 }
 @media (-moz-bool-pref: "userChrome.compatibility.os") and (-moz-gtk-csd-available) and (prefers-color-scheme: light) {
   /* Because of
